--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GalgeLeg">
-        <activity android:name=".NytSpil"></activity>
+        <activity android:name=".DuHarTabt"></activity>
+        <activity android:name=".DuHarVundet" />
+        <activity android:name=".NytSpil" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
