--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GalgeLeg">
-        <activity android:name=".HighScore"></activity>
+        <activity android:name=".ChooseWordType"></activity>
+        <activity android:name=".HighScore" />
         <activity android:name=".ChooseUsername_frag" />
         <activity android:name=".DuHarTabt" />
         <activity android:name=".DuHarVundet" />
